@@ -76,6 +76,8 @@ PHP                                                                        NEWS
     (ilutov)
   . Fixed bug GH-16479 (Use-after-free in SplObjectStorage::setInfo()). (ilutov)
   . Fixed bug GH-16478 (Use-after-free in SplFixedArray::unset()). (ilutov)
+  . Fixed bug GH-15911 (Infinite recursion in AppendIterator::append()).
+    (DanielEScherzer)
 
 - Standard:
   . Fixed bug GH-16293 (Failed assertion when throwing in assert() callback with
